# legal-search-pro

./: .gitignore  .replit  config.py  database.py  main.py  models.py  pyproject.toml  replit.md  sample_data.py  utils.py
routers/: cases.py  search.py
static/: app.js  index.html
