[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bson>=0.5.10",
    "django-routers>=0.2",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
